# vka

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TO_DO.md
examples/: CMakeLists.txt  example_01.cpp  example_02.cpp  example_03.cpp  example_04.cpp  example_05.cpp  example_06.cpp  example_07_mesh_manager.cpp  example_07_mesh_manager.cpp.old  example_07_mesh_object.cpp  example_08_render_targets.cpp  example_08_rendertargets.cpp  example_09_multi_lights.cpp  example_09_multilights.cpp  main.cpp  mesh_manager.cpp  multi_lights.cpp  multibuffer_vertex_attributes.cpp  render_targets.cpp  rendertarget.cpp  testing.cpp  vulkan_app.h  vulkan_app_sdl.h
examples_old/: example_04.old.cpp  example_08_render_targets.old.cpp
examples_sdl/: CMakeLists.txt  example_01_sdl.cpp  example_09_multi_lights_sdl.cpp  example_10_push_descriptor.cpp  example_10_push_descriptor.old.cpp  example_10_push_descriptors.cpp  example_11_tesellation.cpp  vulkan_app_sdl.h
resources/shaders/: compile.sh  compile_all.sh
resources/shaders/axis_shader/: axis_shader.frag  axis_shader.vert  axis_shader_f.spv  axis_shader_v.spv
resources/shaders/compose/: compose.frag  compose.vert
resources/shaders/compose_multilights/: compose_multilights.frag  compose_multilights.vert
resources/shaders/compose_rendertargets/: compose_rendertargets.frag  compose_rendertargets.vert
resources/shaders/default/: default.vert  default_v.spv
resources/shaders/deferred_basic/: deferred_basic.frag  deferred_basic.vert
resources/shaders/depth_testing/: depth_testing.frag  depth_testing.vert  depth_testing_v.spv
resources/shaders/dynamic_uniform_buffer/: dynamic_uniform_buffer.frag  dynamic_uniform_buffer.vert  dynamic_uniform_buffer_f.spv  dynamic_uniform_buffer_v.spv
resources/shaders/gbuffer/: gbuffer.frag  gbuffer.vert
resources/shaders/gbuffer_push_descriptors/: gbuffer_push_descriptors.frag  gbuffer_push_descriptors.vert
resources/shaders/gbuffer_tesellation/: gbuffer_tesellation.frag  gbuffer_tesellation.tesc  gbuffer_tesellation.tese  gbuffer_tesellation.vert
resources/shaders/hello_textured_triangle/: hello_textured_triangle.frag  hello_textured_triangle.vert  hello_textured_triangle_v.spv
resources/shaders/line_shader/: line_shader.vert  line_shader_v.spv
resources/shaders/mipmaps/: mipmaps.vert  mipmaps_v.spv
resources/shaders/push_consts_default/: push_consts_default.frag  push_consts_default.vert  push_consts_default_f.spv  push_consts_default_v.spv
resources/shaders/texture_array/: texture_array.frag  texture_array.vert  texture_array_f.spv  texture_array_v.spv
resources/shaders/uniform_buffer/: uniform_buffer.frag  uniform_buffer.vert  uniform_buffer_v.spv
src/core/: buffer.cpp  buffer_pool.cpp  command_buffer.cpp  command_pool.cpp  context.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  device_memory.cpp  framebuffer.cpp  offscreen_target.cpp  pipeline.cpp  primatives.cpp  renderpass.cpp  screen_target.cpp  semaphore.cpp  shader.cpp  texture.cpp
src/core2/: BufferMemoryPool.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorLayoutSet.cpp  DescriptorPool.cpp  DescriptorSet.cpp  FrameBuffer.cpp  Pipeline.cpp  RenderPass.cpp  RenderTarget.cpp  Screen.cpp  Semaphore.cpp  Shader.cpp
tests/: buffer_manager_test.cpp  geometry_test.cpp  mesh_test.cpp
vka/: linalg.h  vka.h
vka/core/: Semaphore.h  array_view.h  buffer.h  camera.h  classes.h  command_buffer.h  command_pool.h  context.h  context_child.h  deleter.h  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  device_memory.h  extensions.h  framebuffer.h  image.h  log.h  managed_buffer.h  mesh.h  offscreen_target.h  pipeline.h  primatives.h  renderpass.h  screen_target.h  semaphore.h  shader.h  texture.h  texture2d.h  texture2d_array.h  texture2darray.h  transform.h  types.h
vka/core2/: BufferMemoryPool.h  CommandPool.h  DescriptorLayoutSet.h  DescriptorPool.h  DescriptorSet.h  FrameBuffer.h  Memory.h  MeshObject.h  Pipeline.h  RenderPass.h  RenderTarget.h  RenderTarget2.h  Screen.h  Semaphore.h  Shader.h  TextureMemoryPool.h
vka/eng/: manager_base.h  mesh_manager.h
vka/ext/: HostImage.h  HostMesh.h  Primatives.h
vka/geometry/: boundingbox.h  boundingrect.h  frustum.h  geometry.h  line3d.h  plane3d.h  point3d.h  transform.h
vka/math/: line3d.h  transform.h
vka/math/geometry/: boundingrect.h  plane3d.h
vka/utils/: buffer_memory_manager.h  buffer_pool.h  camera.h  glfw_window_handler.h  sdl_window_handler.h  signals.h  transform.h
